--- a/proxy/package.json
+++ b/proxy/package.json
@@ -1,6 +1,7 @@
 {
-  "name":"proxyjyz",
+  "name":"hellojyz",
   "version":"0.0.1",
+  "scripts": {"start": "node app.js"},
   "dependencies":{
     "express":""
   }
